Fix: correctly handle empty tweets in case of only whitespace characters, Fix: char counter reset on submission, Edit: CSS to better match requirements

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -32,6 +32,6 @@ nav .fa-angles-down {
 @media (min-width: 1024px) {
   nav {
     background-color: #4056A1;
-    color: #f4f1ec;
+    color: #FFFFFF;
   }
 }
