--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -1,5 +1,5 @@
  $gray: #545149;
- $white: #f4f1ec;
+ $white: #FFFFFF;
  $red: #ff0000;
  $blue: #0000ff;
  $lightBlue: #4056A1;
