--- a/sass/header.scss
+++ b/sass/header.scss
@@ -5,7 +5,6 @@
   display: flex;
   flex-direction: column;
   @include center;
-  padding-top: 120px;
   height: 520px;
   width: 100%;
   background-color: $teal;
@@ -21,8 +20,9 @@ header * {
 @media (min-width: 1024px) {
 
   .main-header {
-    width: 40%;
-    padding: 2em 4em 2em 4em;
+    width: 400px;
+    height: 400px;
+    padding: 2em 3em 2em 3em;
     margin-top: 220px;
     margin-left: 3%;
     margin-right: 3%;
