--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -16,6 +16,9 @@ html {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   color: $gray;
   background-color: $white;
   font-size: 24px;
@@ -59,6 +62,8 @@ body {
 @media (min-width: 1024px) {
   body {
     display: flex;
+    flex-direction: row;
+    align-items: flex-start;
   }
 
   .container {
